Added the option to do `npm start` to run Magister Calendar.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "url": "https://github.com/lesander/magister-calendar.git"
   },
   "scripts": {
+    "start": "node magister-calendar.js",
     "test": "mocha"
   },
   "bugs": {
