--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
+.git/
+
 node_modules/
 cache/
 debug/
-.git/
+
 client_secret.json
 npm-debug.log
+
 assets/debug.dump
 assets/token.json
+
 *~
 version.sh
 *.psd
+
+crash_*
