--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "googleapis": "2.1.x",
     "magister.js": "2.0.0-alpha.7",
     "npm": "^6.5.0",
-    "request": "2.65.x",
+    "request": "^2.88.0",
     "util": "0.10.x"
   },
   "repository": {
@@ -25,7 +25,7 @@
     "url": "https://github.com/lesander/magister-calendar.git"
   },
   "scripts": {
-    "start": "node magister-calendar.js",
+    "start": "node magister-calendar.js && standard --fix --verbose '**/*.{html,js,vue,md}",
     "test": "mocha"
   },
   "bugs": {
@@ -33,6 +33,16 @@
     "email": "lesander@xs4all.nl"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-markdown": "^1.0.0",
+    "mocha": "^5.2.0",
+    "snazzy": "^8.0.0",
+    "standard": "^12.0.1"
+  },
+  "standard": {
+    "plugins": [
+      "html",
+      "markdown"
+    ]
   }
 }
